# robo1

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.cloud.yml  docker-compose.gui.yml  docker-compose.yaml  launch.sh  possible_bots.md  pyvenv.cfg  util.Mak
.github/workflows/: build-api.yml  pages.yml  terraform.yml
api/: Dockerfile  app.flex.yaml  pyproject.toml  requirements.txt  run.sh
api/app/: main.py
bot/src/: simple_controller.py
ros/: Dockerfile  camera_forwarder.py  entrypoint.sh  requirements.txt  run.sh
ros/launch/: apartment_sim.launch.py  turtlebot_apartment.launch.py  turtlebot_drivers.launch.py
ros/proxy/: app.py
ros/wireguard/: .gitignore
scripts/: run_sim_gui_bare.py  run_stack_tmux.sh  setup-vpn.sh  setup_wsl_venv.sh
sim/: Dockerfile  Makefile.remote  entrypoint.sh  run.sh
sim/controllers/bot/: bot.py
sim/protos/: TurtleBot3Burger.proto
sim/worlds/: .battle_arena.wbproj  .turtlebot_apartment.wbproj  battle_arena.wbt  turtlebot_apartment.wbt
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
terraform/.terraform/: terraform.tfstate
terraform/templates/: startup.sh.tmpl
web/: package-lock.json  package.json  run.sh  tsconfig.json  vite.config.ts
web/nginx/: default.conf
web/public/: index.html
