[project]
name = "robot-gateway"
version = "0.1.0"
description = "FastAPI gateway for Robot Arena"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic[email]",
    "email-validator",
    "pydantic-settings",
    "aiortc",
    "SQLAlchemy",
    "asyncpg",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]",
    "bcrypt>=5.0.0",
]

[tool.uv]
extra-dependencies = []
